fix for background cover on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,6 +6,9 @@ html,
 body {
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/1084731_baby-breath-wallpaper.jpg");
   background-attachment: fixed;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   background-position: center;
   overflow: visible;
